Add desginer plugin to cmake build
Fixes: QTBUG-95668
Pick-to: 6.2
Change-Id: If3613043bfad00871b847c57a3e0961a67cec89b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ project(QtWebEngine
 find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Core)
 find_package(Qt6 ${PROJECT_VERSION} CONFIG QUIET OPTIONAL_COMPONENTS
     Gui Widgets Network OpenGL OpenGLWidgets Quick Qml PrintSupport
-    WebChannel Positioning QuickControls2 Test QuickWidgets QuickTest WebSockets
+    WebChannel Positioning QuickControls2 Test QuickWidgets QuickTest WebSockets Designer
 )
 set(WEBENGINE_MODULE_BUILD TRUE)
 qt_build_repo()
