Fix issue of not working dictionary conversion
Test and examples are no longer included as external
projects, this created and issue that convert_dict
tool does not work during build time due to not installed
resources. Before we supported converting dictionaries
in a prefix build, by supplying the path to the ICU data
file located in the Qt build path. The tool had wrapper script
generated which set QT_WEBENGINE_ICU_DATA_DIR.
This was done using QT_TOOL_ENV:

icu_data_dir.name = QT_WEBENGINE_ICU_DATA_DIR
icu_data_dir.value = $$OUT_PWD/../../../src/core/$$getConfigDir()
QT_TOOL_ENV = icu_data_dir
load(qt_tool)

Add workaround for that issue with cmake by setting env variable
with relative path to resources in build tree.

Make example more exciting for new comers and add generator
expression which guards the setting based on module build.

Note this is temporary solution and webengine cmake api should be
introduced to wrap the conversion tasks in some nice look public api
based on qt_internal_wrap_tool_command.

Disable example on windows, since on one of coin winodws machines we get
error "Exit code 0xc0000135".

Task-number: QTBUG-95590
Change-Id: I44664cbcc85b00ec66657e583929a0fba7bde65b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit b4915805b9527864e2475acfb29f7a029f3325ca)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>

--- a/examples/webenginewidgets/CMakeLists.txt
+++ b/examples/webenginewidgets/CMakeLists.txt
@@ -16,6 +16,7 @@ if(QT_FEATURE_webengine_printing_and_pdf)
     add_subdirectory(printme)
     add_subdirectory(html2pdf)
 endif()
-if(QT_FEATURE_webengine_spellchecker AND NOT CMAKE_CROSSCOMPILING AND NOT QT_FEATURE_webengine_native_spellchecker)
+if(QT_FEATURE_webengine_spellchecker AND NOT CMAKE_CROSSCOMPILING
+    AND NOT QT_FEATURE_webengine_native_spellchecker AND NOT WIN32)
     add_subdirectory(spellchecker)
 endif()
