--- a/tests/auto/widgets/spellchecking/CMakeLists.txt
+++ b/tests/auto/widgets/spellchecking/CMakeLists.txt
@@ -31,7 +31,9 @@ foreach(dictFile ${dicts})
     add_custom_command(TARGET tst_spellchecking
         PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory ${spellcheckerDir}
-        COMMAND  $<TARGET_FILE:${QT_CMAKE_EXPORT_NAMESPACE}::qwebengine_convert_dict>
+        COMMAND ${CMAKE_COMMAND} -E env
+        $<IF:$<BOOL:${WEBENGINE_MODULE_BUILD}>,QT_WEBENGINE_ICU_DATA_DIR=${CMAKE_CURRENT_BINARY_DIR}/../../../../resources,CMAKE=AWESOME>
+        $<TARGET_FILE:${QT_CMAKE_EXPORT_NAMESPACE}::qwebengine_convert_dict>
         ${CMAKE_CURRENT_SOURCE_DIR}/dict/${dictFile}
         ${spellcheckerDir}/${dictName}.bdic
         COMMENT "Running qwebengine_convert_dict"
