Add missing touch-related delegates to CMake
Task-number: QTBUG-93666
Pick-to: 6.2
Change-Id: Id959077f4aeb8f6e4d619d88a683b8f5f7447775
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/webenginequick/ui/CMakeLists.txt
+++ b/src/webenginequick/ui/CMakeLists.txt
@@ -9,6 +9,8 @@ set(qml_files
     "MenuSeparator.qml"
     "PromptDialog.qml"
     "ToolTip.qml"
+    "TouchHandle.qml"
+    "TouchSelectionMenu.qml"
 )
 
 set(resource_files
