Fix installation paths of resources and locales
Fixes: QTBUG-95231
Pick-to: 6.2
Change-Id: I9aa2c42f97b903d17a709767f26b0b4dde4db8b5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/api/CMakeLists.txt
+++ b/src/core/api/CMakeLists.txt
@@ -129,11 +129,11 @@ if(QT_FEATURE_framework)
     add_custom_target(generate_resources_${config} DEPENDS ${allResourceFiles})
 else()
     install(FILES ${localeFiles}
-        DESTINATION translations/qtwebengine_locales
+        DESTINATION ${INSTALL_TRANSLATIONSDIR}/qtwebengine_locales
         CONFIGURATIONS ${config}
     )
     install(FILES ${resourceFiles}
-        DESTINATION resources
+        DESTINATION ${INSTALL_DATADIR}/resources
         CONFIGURATIONS ${config}
     )
     if(NOT QT_WILL_INSTALL)
