Add workaround for not working linking with bfd linker
Removal of external project removed also workaround for
coin bug, which is still not fixed.

Add linker launcher in case maximum number of open files is
below 4096 on linux for WebEngineCore target.
This launches bash script wrapper which sets ulimit.

This is poor man workaround and requires cmake 3.21 to work.

Task-number: COIN-699
Task-number: QTBUG-95590
Change-Id: Ib9d0c4ced988d4692746e51f3abbe63ff5085836
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit c18a4d6f354838ea3edfb18d31007237dad08aa6)

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -463,6 +463,9 @@ target_include_directories(WebEngineCore PRIVATE
 
 add_gn_build_aritfacts_to_target(WebEngineCore QtWebEngineCore core ${buildDir})
 add_dependencies(WebEngineCore run_core_NinjaDone)
+if(COIN_BUG_699)
+   set_property(TARGET WebEngineCore PROPERTY CXX_LINKER_LAUNCHER ${PROJECT_BINARY_DIR}/linker_ulimit.sh)
+endif()
 
 ##
 #  SANDBOX
