Use generator expression to get moc path
We used IMPORTED_LOCATION for getting moc path,
however this will not work in case of top level builds,
since moc is not "imported", we can not use LOCATION
due to https://cmake.org/cmake/help/latest/policy/CMP0026.html
Use generator expression to set the moc path for gn.

Clean up RSP_PREFIX leftover from previous gn version.

Note QtPdf does not even need moc setup since we just need
pdfium library.

Pick-to: 6.2
Task-number: QTBUG-95590
Change-Id: Ief3dca96f65e198e9693293316b1a90007c56355
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -40,12 +40,11 @@ foreach(arch ${archs})
 
         set(buildGn core_${config}_${arch})
         add_gn_target(${buildGn} ${config} ${arch}
-            SOURCES DEFINES CXX_COMPILE_OPTIONS C_COMPILE_OPTIONS INCLUDES MOC_PATH RSP_PREFIX
+            SOURCES DEFINES CXX_COMPILE_OPTIONS C_COMPILE_OPTIONS INCLUDES MOC_PATH
         )
         resolve_target_includes(gnIncludes WebEngineCore)
         get_forward_declaration_macro(forwardDeclarationMacro)
         get_target_property(qtWebEngineProcessName WebEngineCore QTWEBENGINEPROCESS_NAME)
-        get_target_property(mocFilePath Qt6::moc IMPORTED_LOCATION)
 
         if(QT_FEATURE_debug_and_release AND ("${config}" STREQUAL "Debug"))
             set(qtWebEngineProcessName "${qtWebEngineProcessName}${CMAKE_DEBUG_POSTFIX}")
@@ -64,10 +63,6 @@ foreach(arch ${archs})
         endif()
 
         extend_gn_target(${buildGn}
-            MOC_PATH
-                ${mocFilePath}
-            RSP_PREFIX
-                src/core/${config}/${arch}
             INCLUDES
                 ${gnIncludes}
             DEFINES
