Restore module consistency
Even we do build qtpdf module within qtwebengine repo
keep target name as webengine so it fits 'better'
with other project's names.

Pick-to: 6.2
Change-Id: If7d33ff3bf2b0d53a9b6e82706432a85c2991117
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ include(.cmake.conf)
 include(ExternalProject)
 include(cmake/Functions.cmake)
 
-project(QtWebEngineAndQtPdf
+project(QtWebEngine
     VERSION "${QT_REPO_MODULE_VERSION}"
     DESCRIPTION "QtWebEngine and QtPdf modules"
     HOMEPAGE_URL "https://qt.io/"
