--- a/src/core/configure/BUILD.root.gn.in
+++ b/src/core/configure/BUILD.root.gn.in
@@ -121,6 +121,7 @@ shared_library("QtWebEngineCore") {
     "//components/proxy_config",
     "//components/user_prefs",
     "//content/public/app",
+    "//content/public/browser",
     "//content",
     "//media:media_buildflags",
     "//net",
@@ -131,7 +132,6 @@ shared_library("QtWebEngineCore") {
     "//ui/gl",
     "//qtwebengine/browser:interfaces",
     "//qtwebengine/userscript",
-    "//qtwebengine/browser:service_manifests",
     "//qtwebengine/common:mojo_bindings",
     ":qtwebengine_sources",
     ":qtwebengine_resources",
