Disable FTP support
Will be gone in 92 anyway, so avoid it in 6.x

Change-Id: Idc1d58bcda6ee7edb81f7b468ff548cc370e40ec
Pick-to: 6.2 6.2.0
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -292,6 +292,7 @@ foreach(arch ${archs})
             v8_use_external_startup_data=false
             strip_absolute_paths_from_debug_symbols=false
             blink_symbol_level=0
+            disable_ftp_support=true
         )
 
         extend_gn_list(gnArgArg
