Add matrix builds
Since coin does not support doing matrix projects,
add primitive way to automate features builds.

Add self build launcher in form of external projects
to do few builds one after the other which test
some of our features.

These are just compilation tests and could also run in
coin as scheduled build.

Usage:

/path/to/qt-cmake-private /path/to/webenginesources -DMATRIX_BUILD=ON

Created currently builds:

 * webengine_extensions-OFF
 * webengine_printing_and_pdf-OFF
 * webengine_proprietary_codecs-ON
 * webengine_spellchecker-OFF
 * webengine_webrtc-OFF
 * qtwebengine_build-OFF

Pick-to: 6.2
Change-Id: Ie1bbc2cf9b01cb2e5089832d8f1cd6171e31b6fe
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,16 @@ find_package(Qt6 ${PROJECT_VERSION} CONFIG QUIET OPTIONAL_COMPONENTS
     Gui Widgets Network OpenGL Quick Qml PrintSupport
     WebChannel Positioning QuickControls2 Test QuickWidgets QuickTest WebSockets Designer
 )
+
+if(MATRIX_BUILD AND NOT MATRIX_SUBBUILD AND NOT QT_SUPERBUILD)
+    add_build(webengine_webrtc OFF)
+    add_build(webengine_proprietary_codecs ON)
+    add_build(webengine_printing_and_pdf OFF)
+    add_build(webengine_extensions OFF)
+    add_build(webengine_spellchecker OFF)
+    add_build(qtwebengine_build OFF)
+    return()
+endif()
+
 set(WEBENGINE_MODULE_BUILD TRUE)
 qt_build_repo()
