Fix no webrtc builds
In case of ozone x11 backend we need x11, which
is pulled by use_webrtc_x11, however in case of no
webrtc build we lack x11 dependency.
Add missing dependency.

Pick-to: dev
Change-Id: I19eada846115073251cdf85ce1fabd4d1d2baf2e
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/core/ozone/BUILD.gn
+++ b/src/core/ozone/BUILD.gn
@@ -26,9 +26,13 @@ source_set("qt") {
   ]
 
   defines = [ "OZONE_IMPLEMENTATION" ]
-
+  libs = []
   if (use_xkbcommon) {
     configs += [ ":xkbcommon" ]
-    libs = [ "xkbfile" ]
+    libs += [ "xkbfile" ]
+  }
+
+  if (ozone_platform_x11) {
+    libs += [ "X11" ]
   }
 }
