Add onTouchSelectionMenuRequested QML handler
Task-number: QTBUG-85043
Change-Id: Iecd2f5ae20fcf031937a1d44cc154f2e2a3ff52f
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webenginequick/customdialogs/CMakeLists.txt
+++ b/examples/webenginequick/customdialogs/CMakeLists.txt
@@ -48,6 +48,8 @@ set(customdialogs_resource_files
     "forms/JavaScriptForm.ui.qml"
     "forms/Menu.qml"
     "forms/MenuForm.ui.qml"
+    "forms/TouchSelectionMenu.qml"
+    "forms/TouchSelectionMenuForm.ui.qml"
     "icon.svg"
     "index.html"
     "main.qml"
