--- a/src/webenginequick/CMakeLists.txt
+++ b/src/webenginequick/CMakeLists.txt
@@ -22,6 +22,9 @@ qt_internal_add_qml_module(WebEngineQuick
         api/qquickwebenginesingleton.cpp api/qquickwebenginesingleton_p.h
         api/qquickwebenginetouchhandleprovider.cpp
         api/qquickwebenginetouchhandleprovider_p_p.h
+        api/qquickwebenginetouchselectionmenurequest.cpp
+        api/qquickwebenginetouchselectionmenurequest_p.h
+        api/qquickwebenginetouchselectionmenurequest_p_p.h
         api/qquickwebengineview.cpp api/qquickwebengineview_p.h
         api/qquickwebengineview_p_p.h
         api/qquickwebengineforeigntypes_p.h
