Skip unnecessary commands when cross-building tools
Call qt_internal_return_unless_building_tools() directly after
qt_internal_add_tool() to avoid having to special-case code for when
this function only creates imported targets in cross-builds.

Task-number: QTBUG-85084
Change-Id: If43de0acd45b53032cae25ce0062c390e3f7abf2
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/core/tools/CMakeLists.txt
+++ b/src/core/tools/CMakeLists.txt
@@ -11,6 +11,7 @@ if(QT_FEATURE_webengine_spellchecker)
         TOOLS_TARGET WebEngineCore
         SOURCES main.cpp
     )
+    qt_internal_return_unless_building_tools()
     qt_skip_warnings_are_errors(${dict_target_name})
     add_dependencies(${dict_target_name} WebEngineCore)
     qt_internal_extend_target(${dict_target_name} CONDITION WIN32
