Add bitcode support for qtpdf on ios
Adds -fembed-bitcode-marker for debug or -fembed-bitcode
in case of release.

Fixes: QTBUG-94368
Change-Id: I65031a545517799245e8d08d79e78141d26e9c58
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/pdf/configure.json
+++ b/src/pdf/configure.json
@@ -44,7 +44,13 @@
              "purpose": "Enables XFA-TIFF support.",
              "condition": "features.pdf-xfa",
              "output": ["privateFeature" ]
-          }
+          },
+         "pdf-bitcode": {
+              "label": "Bitcode support",
+              "purpose": "Enables bitcode",
+              "condition": "config.ios",
+              "output": ["privateFeature"]
+         }
     },
     "report": [
     ],
@@ -57,7 +63,8 @@
                 "pdf-xfa-bmp",
                 "pdf-xfa-gif",
                 "pdf-xfa-png",
-                "pdf-xfa-tiff"
+                "pdf-xfa-tiff",
+                "pdf-bitcode"
             ]
         }
     ]
