Handle qtpdf compilation with static runtime
Add feature to enable compilation with static runtime.

Fixes: QTBUG-94046
Pick-to: 6.3
Change-Id: I6e150cfaad020dfd942c45111139556b7e50dce5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/pdf/CMakeLists.txt
+++ b/src/pdf/CMakeLists.txt
@@ -134,6 +134,10 @@ foreach(arch ${archs})
               ninja_use_custom_environment_files=false
               safe_browsing_mode=0
           )
+          extend_gn_list(gnArgArg
+              ARGS qt_uses_static_runtime
+              CONDITION QT_FEATURE_pdf_static_runtime
+          )
         endif()
 
         extend_gn_list(gnArgArg
