Handle qtpdf compilation with static runtime
Add feature to enable compilation with static runtime.

Fixes: QTBUG-94046
Change-Id: I6e150cfaad020dfd942c45111139556b7e50dce5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/pdf/configure.json
+++ b/src/pdf/configure.json
@@ -50,6 +50,12 @@
               "purpose": "Enables bitcode",
               "condition": "config.ios",
               "output": ["privateFeature"]
+         },
+         "pdf-static-runtime": {
+              "label": "Use static runtime",
+              "purpose": "Enables static runtime",
+              "condition": "config.static && config.static_runtime",
+              "output": ["privateFeature"]
          }
     },
     "report": [
@@ -64,7 +70,8 @@
                 "pdf-xfa-gif",
                 "pdf-xfa-png",
                 "pdf-xfa-tiff",
-                "pdf-bitcode"
+                "pdf-bitcode",
+                "pdf-static-runtime"
             ]
         }
     ]
